<resources>
    <string name="app_name">Intelli Supermart</string>
    <string name="nav_drawer_open">Open Navigation Drawer</string>
    <string name="nav_drawer_close">Close Navigation Drawer</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">WELCOME</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Login</string>
    <string name="menu_my_addresses">My Addresses</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_my_cart">My Cart</string>
    <string name="search_hint">Search here</string>
    <string name="about" translatable="false">Intelli Supermart (Private) Limited is a subsidiary of Hum Network Limited.
        Intelli Supermart is an online super market which aims at saving users from the hassle of going out and
        buying every day necessities. The online store brings to you different categories such as biscuits
        and chocolates, breakfast and dairy, grocery and staples, beverages, baby and kids and pet care. You can
        choose from thousands of products. Intelli Supermart is currently delivering in Karachi only.
    \n\n
         Intelli Supermart aims to evolve the grocery service industry in Pakistan and we aim to target the people who
        lead a busy lifestyle to shift them from the traditional method of grocery procurement to a more
        advance online mode. We  will ensure a hassle-free shopping experience for our customers, so that
        they can spend valuable time and energy somewhere else.
     \n\n
        Intelli Supermart aims to be a very customer centric organization. We intend to focus on complete customer
        journey of our customers, starting with ordering quality products at competitive pricing, on time
        delivery and hassle-free return policy.
    </string>
    <string name="policy">At Intelli Supermart, we understand your concern about your personal information, we care about
        it too. As such, we ensure we safeguard the information provided and honor your requests for
        confidentiality when you log in to www. Intelli Supermart.com Website and mobile app.
        \n\n
        1.1 This private policy governs your privacy rights regarding our collection, storage and
        accumulation of your personally identifiable information (name, contact number, mailing and
        postal address) concerning your use of our website. This information is stored in an electronic
        database, which is for Intelli Supermart’s website use only. This privacy policy applies to the Site and
        services provided by Intelli Supermart.
        \n\n
        1.2 We shall therefore only use your name and other information which relates to you in the manner
        set out in this Privacy Policy. We will only collect information where it is necessary for us to do
        so and we will only collect information if it is relevant to our dealings with you.
        \n\n
        1.3 You can visit the Website and browse without having to provide personal details. During
        your visit to the Intelli Supermart.com you remain anonymous and at no time can we identify you unless
        you have an account on the Website and log in with your username and password.
        \n\n
        1.4 We may collect your personal identification details if you seek to place an order through
        our Website.
        \n\n
        1.5 Whenever you interact on our site, we receive and store certain information in the form of
        ‘cookies’ which is basically done to enhance user experience. Cookies are basically placed on
        your hard drive and not on our site for record-keeping purposes.
        \n\n
        1.6 This Privacy Policy, which forms part of our Terms of Use, we will generally only collect
        your personal information from you or from someone you’ve authorized to provide it to us. We will
        also only collect information by lawful and fair means and not in an unreasonably intrusive behavior.
        \n\n
        1.7 We collect, store and process your data for processing your purchase on our Website and
        any possible later claims, and to provide you with our discounted promotions and future offers.
        \n\n
        1.8 We need this information to grant you a ‘’go ahead’’ signal with placing your order for a product(s).
        We may use that data to process payment for the product and delivery of the product to you.
        \n\n
        1.9 We may pass on your basic information (name, contact number and postal address) on to a third party
        in order to make delivery of the product to you (for an example to courier service provider or
        delivery supplier).
        \n\n
        1.10 We seek to use information from correspondence which hereby means that you will provide certain
        essential information if you contact us by email or use any of the webforms on the Website.
        \n\n
        1.11 We may also use your data in order to collect payment from you or in case we have any query regarding
        the order placed by Users (each, a User).
        \n\n
        1.12 It is necessary for the Users to know how we use the collected information; \n
        i. To improve oursite (the feedback collected from the Users to improve the quality of service
        provided by Intelli Supermart.
        \n
        ii. To send you periodic emails regarding offers and promotions on our Website.
        \n
        iii. To improve communication barrier between User (you) and Service Provider (Us).
        \n\n
        1.13 We, at Intelli Supermart, ensure that access to customer information is limited to employees or until otherwise
        necessary. All employees are strictly committed to follow Privacy Policy which in turn implies
        that we aim to serve you better.
        \n\n
        1.14 Under no circumstances do we rent, trade or sell out your information that we have collected with
        any other company for their marketing purposes without your consent.
        \n\n
        1.15 We make reasonable efforts to ensure that your personal information is protected while you are on
        our Website. We have security procedures in the storage and disclosure or destruction of personal
        information, which are devised to protect unauthorized access. It’s the kind of protection we
        would want of our data, if we were surfing another site on Web.
        \n\n
        1.16 Intelli Supermart website links to other social media platforms that may collect personal information, however,
        Intelli Supermart shall not be held responsible for the loss of your data.
        \n\n
        1.17 We are always improving and updating our Website to further enhance shopping on our Website.
        As a result, our policies would be evolving with time. As we update our Website and add new services,
        we will update our Privacy Policy accordingly.
        \n\n
        1.18 To use our Website, you are consenting to our Privacy Policy. We appreciate your trust in us and we
        promise to protect data. Feel free to contact our customer service team to help you out! Shoot us
        an email at customer@Intelli Supermart.com or contact us on (021) 111 116 278.\n\n</string>
    <string name="mr">Mr.</string>
    <string name="mrs">Mrs.</string>
    <string name="miss">Miss.</string>
    <string name="nameHint">Name</string>
    <string name="emailHint">Email</string>
    <string name="houseHint">Flat, House, Office No, Building, Company</string>
    <string name="areaHint">Area, Colony, Sector, Street</string>
    <string name="cityHint">City</string>
    <string name="nickname">Nickname of your Address</string>
    <string name="continueBtn">Continue</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="other">Other</string>
    <string name="previous_activity">Direct to previous activity.</string>
    <string name="product_search">Search for product</string>
    <string name="view_cart">View cart</string>
    <string name="title_category">Juices and Concentrates</string>
    <string name="product_image">Product Image</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="incl_of_all_taxes">(incl. of all taxes)</string>
    <string name="promo_code">Add Promo Code &amp; Offers</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="pay_your_cash">Please pay amount to the delivery executive</string>
    <string name="place_order">Place Order</string>
    <string name="yayyy_order_successfully_placed">Yay! Order successfully placed</string>
    <string name="order_id_122333">Order ID: 122333</string>
    <string name="schedule_delivery_date_and_time">Schedule Delivery Date &amp; Time</string>
    <string name="tomorrow_10_00_am_10_00_pm">Tomorrow 10:00 AM - 10:00 PM</string>
    <string name="store_price_guarantee">*Store Price Guarantee</string>
    <string name="_100_money_back_guarantee_terms_and_conditions_apply">*100% Replacement Guarantee (Terms and Conditions Apply)</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="delivery_date_and_time">Delivery Date and Time</string>
    <string name="PKR_250">PKR 250</string>
    <string name="view_4_items">View 4 Items</string>
    <string name="name_of_item">Name of Category</string>
    <string name="price_of_item">Price of Item</string>
    <string name="item_description">Item Description</string>
</resources>