<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoryActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/AppTheme.AppBarOverlay">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">


            <ImageView
                android:id="@+id/product_back"
                android:layout_width="30dp"
                android:layout_height="140dp"
                android:layout_alignStart="@+id/title_product_category"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_back"
                android:contentDescription="@string/previous_activity" />

            <TextView
                android:id="@+id/title_product_category"
                android:layout_width="282dp"
                android:layout_height="wrap_content"
                android:text="@string/title_category"
                android:textAlignment="center"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/product_search"
                android:layout_width="30dp"
                android:layout_height="140dp"
                android:layout_toStartOf="@+id/product_cart"
                android:src="@drawable/ic_search"
                android:contentDescription="@string/product_search" />

            <ImageView
                android:id="@+id/product_cart"
                android:layout_width="30dp"
                android:layout_height="140dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:src="@drawable/ic_cart"
                android:contentDescription="@string/view_cart"/>

        </RelativeLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>