<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    app:cardElevation="4dp"
    android:layout_marginBottom="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_margin="5dp">

        <ImageView
            android:id="@+id/item_image"
            android:layout_width="140dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            android:src="@drawable/pineapple_200ml"
            android:contentDescription="@string/product_image" />

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/name_of_item"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_below="@+id/item_name"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/item_image"
            android:text="@string/item_description"
            android:textColor="@color/promo"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_description"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/item_image"
            android:gravity="center"
            android:text="@string/price_of_item"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_cancel"
            android:src="@drawable/ic_cancel"
            android:layout_alignParentEnd="true"
            android:padding="5dp"
            android:contentDescription="Cancel product" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>